manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82040175-1" 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82040175-1"
  template:
    metadata:
      labels:
        app: "82040175-1" 
    spec:
      containers:
        - name: "82040175-1" 
          image: cepgstapacr.azurecr.io/82040175-1
          ports:
          - containerPort: 8080
