manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-82040175-1
spec:
    ports:
    - port: 8080 
    selector:
        app: "82040175-1"
