manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82040175-1-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "a82040175-1-82040175-1.cepg-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-82040175-1
            port:
              number: 8080
        pathType: Prefix
